--- a/index.html
+++ b/index.html
@@ -280,11 +280,12 @@
             <span class="current-price">₹1,599</span>
           <span class="original-price">₹2,199</span>
              </div>
-                            <a href="#" class="btn btn-primary">Add to Cart</a>
+                            <a href="h.html" class="btn btn-primary">Add to Cart</a>
         </div>
       </div>
   </div>
             </div>
+            
         </section>
  
         <section id="contact" class="contact">
@@ -377,5 +378,6 @@
             </div>
         </div>
     </footer>
+    
 </body>
 </html>
